Add motion library and implement featured posts functionality
- Updated package.json and package-lock.json to include 'motion' dependency.
- Refactored Home component to fetch and display featured posts.
- Enhanced Hero component to support slideshow of featured posts.
- Modified CTA and Header components for improved navigation.
- Updated PortfolioGrid and ProjectCard components for better image handling and animations.
- Adjusted Strapi API functions to retrieve featured posts.
- Updated types to include location and year for posts.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "motion": "^12.34.3",
     "next": "16.1.6",
     "photoswipe": "^5.4.4",
     "react": "19.2.3",
